--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ pydantic-settings>=2.5.2
 python-dotenv>=0.21.0
 colorama>=0.4
 matplotlib>=3.10.0
+scikit-learn>=1.7.0
 # Optional: For local Llama models (if using Hugging Face)
 # torch>=2.0.0
 # transformers>=4.30.0
